🐛 [FIX]: `Modal` hidden on Safari and in React Native webviews (#1148)

--- a/packages/react/src/components/Modal/Modal.css
+++ b/packages/react/src/components/Modal/Modal.css
@@ -53,7 +53,6 @@
     }
 
     position: relative;
-    height: 100%;
     display: flex;
     flex-direction: column;
     gap: var(--h-modal-content-gap);
@@ -62,6 +61,10 @@
 
     @media (--h-tablet) {
       padding: var(--h-modal-padding);
+    }
+
+    &:where([data-contains-image] &, [data-full-screen] &) {
+      height: 100%;
     }
 
     &:where([data-contains-image] &) {
